# dpch560

./: .gitignore  .packit.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  daemon.init  daemon.spec  dp-ch560-display-daemon.service  make.buider.sh  run.builder.sh
src/: CMakeLists.txt  common.hpp  config.c  config.cpp  config.h  config.hpp  cpu.rs  daemon.c  daemon.cpp  demonize.c  demonize.cpp  demonize.h  demonize.hpp  demonize.rs  display.cpp  display.hpp  display.rs  gpu.rs  hid.c  hid.cpp  hid.h  hid.hpp  hid.rs  logging.rs  main.rs  metrics.rs  runtime_params.c  runtime_params.cpp  runtime_params.h  runtime_params.hpp  sensor.rs  sensors.c  sensors.cpp  sensors.h  sensors.hpp  syslog.cpp  syslog.hpp  usage.c  usage.cpp  util.c  (+3 more)
